fix: adjust forecast divider width on tablets

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -384,6 +384,11 @@ body {
         width: 100%;
         height: 1px;
         background-color: v.$primary;
+
+        @include m.tablet {
+            width: calc(100% + 16px);
+            margin: 0 -8px;
+        }
     }
 
     &__title {
